# PyDirWalker

./: myproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
src/PyDirWalker/: PyDirWalker.cpp  PyDirWalker.pyx  setup.py
src/PyDirWalker/lib/: PyDirWalker.pxd
tests/: test.py
